ui_test/parser/fail/example.err
error: Expected `let`, `&`, `*`, `-`, `!`, `...`, `..=`, `..`, lifetime, `loop`, `while`, `for`, `{`, identifier, `root`, `<`, number, `(`, `[`, `match`, `if`, `break`, `continue`, `return`, or `|`
  ┌─ $DIR/example.camp:3:1
  │
3 │ }
  │ ^

